--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,15 +1,35 @@
+# NAME = libftprintf.a
+# CC = gcc
+# CFLAGS = -Wall -Wextra -Werror -c
+# ARCHIVE = ar -crs
+# SRCS = $(wildcard *.c)
+	
+# OBJS = $(SRCS:.c=.o)
+
+# all: $(NAME)
+
+# $(NAME): $(OBJS)
+# 	$(ARCHIVE) $(NAME) $(OBJS) 
+
+# $(OBJS):
+# 	$(CC) $(CFLAGS) $(SRCS)
+
+# clean:
+# 	rm -f *.o
+
+# fclean: clean
+# 	rm -f $(NAME)
+
+# re: fclean all
+
+# .PHONY: all clean fclean re
+
+# WINDOWS
 NAME = libftprintf.a
-CC = cc
+CC = gcc
 CFLAGS = -Wall -Wextra -Werror -c
 ARCHIVE = ar -crs
-SRCS = ft_putchar.c	\
-		ft_putstr.c \
- 		ft_putnbr.c \
-		ft_putnbr_u.c \
-	 	to_hex_lower.c \
-		to_hex_upper.c \
-		print_ptr.c \
-		ft_printf.c
+SRCS = $(wildcard *.c)
 	
 OBJS = $(SRCS:.c=.o)
 
@@ -22,10 +42,10 @@ $(OBJS):
 	$(CC) $(CFLAGS) $(SRCS)
 
 clean:
-	rm -f *.o
+	del *.o
 
 fclean: clean
-	rm -f $(NAME)
+	del $(NAME)
 
 re: fclean all
 
