--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,3 +1,30 @@
+# NAME = libft.a
+# CC = gcc
+# CFLAGS = -Wall -Wextra -Werror -c
+# ARCHIVE = ar -crs
+# SRCS = $(wildcard *.c)
+	
+# OBJS = $(SRCS:.c=.o)
+
+# %.c:
+# 	$(CC) $(CFLAGS) $(SRCS)
+
+# all: $(NAME)
+
+# $(NAME): $(OBJS)
+# 	$(ARCHIVE) $(NAME) $(OBJS) 
+
+# clean:
+# 	rm -f *.o
+
+# fclean: clean
+# 	rm -f $(NAME)
+
+# re: fclean all
+
+# .PHONY: all clean fclean re
+ 
+# WINDOWS
 NAME = libft.a
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -c
@@ -15,10 +42,10 @@ $(NAME): $(OBJS)
 	$(ARCHIVE) $(NAME) $(OBJS) 
 
 clean:
-	rm -f *.o
+	del *.o
 
 fclean: clean
-	rm -f $(NAME)
+	del $(NAME)
 
 re: fclean all
 
