--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,36 +1,9 @@
-# NAME = libftprintf.a
-# CC = gcc
-# CFLAGS = -Wall -Wextra -Werror -c
-# ARCHIVE = ar -crs
-# SRCS = $(wildcard *.c)
-	
-# OBJS = $(SRCS:.c=.o)
-
-# all: $(NAME)
-
-# $(NAME): $(OBJS)
-# 	$(ARCHIVE) $(NAME) $(OBJS) 
-
-# $(OBJS):
-# 	$(CC) $(CFLAGS) $(SRCS)
-
-# clean:
-# 	rm -f *.o
-
-# fclean: clean
-# 	rm -f $(NAME)
-
-# re: fclean all
-
-# .PHONY: all clean fclean re
-
-# WINDOWS
 NAME = libftprintf.a
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -c
 ARCHIVE = ar -crs
 SRCS = $(wildcard *.c)
-	
+  
 OBJS = $(SRCS:.c=.o)
 
 all: $(NAME)
@@ -42,11 +15,38 @@ $(OBJS):
 	$(CC) $(CFLAGS) $(SRCS)
 
 clean:
-	del *.o
+	rm -f *.o
 
 fclean: clean
-	del $(NAME)
+	rm -f $(NAME)
 
 re: fclean all
 
 .PHONY: all clean fclean re
+
+# WINDOWS
+#NAME = libftprintf.a
+#CC = gcc
+#CFLAGS = -Wall -Wextra -Werror -c
+#ARCHIVE = ar -crs
+#SRCS = $(wildcard *.c)
+#	
+#OBJS = $(SRCS:.c=.o)
+#
+#all: $(NAME)
+#
+#$(NAME): $(OBJS)
+#	$(ARCHIVE) $(NAME) $(OBJS) 
+#
+#$(OBJS):
+#	$(CC) $(CFLAGS) $(SRCS)
+#
+#clean:
+#	del *.o
+#
+#fclean: clean
+#	del $(NAME)
+#
+#re: fclean all
+#
+#.PHONY: all clean fclean re
